--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
     "prestart": "babel-node buildScripts/startMessage.js",
-    "start": "npm-run-all --parallel security-check open-src lint:watch test:watch",
+    "start": "npm-run-all --parallel security-check open-src lint:watch test:watch start-mockapi",
     "open-src": "babel-node buildScripts/srcServer.js",
     "security-check": "nsp check",
     "localtunnel": "lt --port 3000",
@@ -12,12 +12,18 @@
     "lint": "esw webpack.config.* src buildScripts --color",
     "lint:watch": "npm run lint -- --watch",
     "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "generate-mock-data": "babel-node buildScripts/generateMockData",
+    "prestart-mockapi": "npm run generate-mock-data",
+    "start-mockapi": "json-server --watch src/api/db.json --port 3001"
   },
   "author": "Manu Prathapan",
   "license": "WSP",
   "dependencies": {
-    "jsdom": "^11.8.0"
+    "jsdom": "^11.8.0",
+    "json-schema-faker": "^0.5.0-rc15",
+    "json-server": "^0.12.1",
+    "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
     "babel-cli": "6.16.0",
